Configure frontend and backend for Vercel deployment with environment variables for API URL and CORS
Co-authored-by: Bastiannsp <173082129+Bastiannsp@users.noreply.github.com>